GetTasksTodoMicroservice/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-get-task-api
  labels:
    app: todo-get-task-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todo-get-task-api
  template:
    metadata:
      labels:
        app: todo-get-task-api
    spec:
      containers:
      - name: todo-get-task-api
        image: gssacr.azurecr.io/gettaskstodomicroservice:19
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
